added fixed nav and jumbotron

--- a/index.html
+++ b/index.html
@@ -12,11 +12,35 @@
     <header>
         <!-- fixed nav -->
         <nav>
-
+            <div class="nav-left">
+                <a href=""><img src="" alt=""></a>
+                <a href="">Perché Dropbox</a>
+                <a href="">Funzioni</a>
+                <a href="">Piani e Prezzi</a>
+            </div>
+            <div class="nav-right">
+                <a href="">Supporto</a>
+                <a href="">Contatta l'ufficio vendite</a>
+                <a href="">Accedi</a>
+                <button>Inizia</button>
+            </div>
         </nav>
         <!-- jumbotron -->
-        <div>
-
+        <div class="headersection">
+            <div class="jumbo-box">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="jumbotron">
+                    <div class="jumbo-left">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta saepe sint hic facilis ex quidem sapiente ab. Magni voluptatum tenetur facilis et provident dignissimos. Obcaecati dignissimos exercitationem necessitatibus soluta accusantium!</p>
+                        <button>Inizia la tua prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                        <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                    </div>
+                    <div class="jumbo-right">
+                        <img src="https://picsum.photos/800/400" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
