added 2nd section and 3rd section layout

--- a/index.html
+++ b/index.html
@@ -47,10 +47,37 @@
     <!-- main content -->
     <main>
         <!-- business plans section -->
-        <section></section>
+        <section class="section1">
+            <div>
+                <h2>Trova il piano business che fa per te</h2>
+                <input type="radio" id="choice1" name="contract">
+                <label for="choice1">Fatturazione Mensile</label>
+                <input type="radio" id="choice2" name="contract">
+                <label for="choice2">Fatturazione annuale</label>
+            </div>
+            <div class="content-box">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="content-box">
+
+            </div>
+        </section>
 
         <!-- partner section -->
-        <section></section>
+        <section class="section1">
+            <div class="partner-box">
+                <div class="partner-left">
+                    <img src="https://picsum.photos/800/400" alt="">
+                </div>
+                <div class="partner-right">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum iure porro doloribus veritatis voluptates libero, est harum alias magnam!</p>
+                    <button>Trova un partner</button>
+                </div>
+            </div>
+        </section>
 
         <!-- dropbox functions flex wrap -->
         <section></section>
