added 4th section layout

--- a/index.html
+++ b/index.html
@@ -80,7 +80,17 @@
         </section>
 
         <!-- dropbox functions flex wrap -->
-        <section></section>
+        <section class="section1">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+            <div class="function-box">
+                <div class="function-element"></div>
+                <div class="function-element"></div>
+                <div class="function-element"></div>
+                <div class="function-element"></div>
+                <div class="function-element"></div>
+                <div class="function-element"></div>
+            </div>
+        </section>
 
         <!-- user's info -->
         <div></div>
