added square section

--- a/index.html
+++ b/index.html
@@ -90,15 +90,47 @@
                 <div class="function-element"></div>
                 <div class="function-element"></div>
             </div>
+            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a href="">Scopri di più sui nostri clienti</a>
         </section>
 
         <!-- user's info -->
-        <div></div>
-        <section></section>
-        <div></div>
+        <section class="container">
+            <div class="user-box">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+
+            <div class="user-box">
+
+            </div>
+
+            <div class="user-box">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+        </section>
+        <div class="section-w-100">
+            <div class="section1">
+                <div class="freetrial-box">
+                    <div class="freetrial-left">
+                        <h2 class="freetrial-h2">Porta Dropbox Business nella tua azienda.</h2>
+                    </div>
+                    <div class="freetrial-right">
+                        <button class="freetrial-button">Inizia la tua prova gratuita</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- FAQ hover -->
-        <section></section>
+        <section class="section1">
+            
+        </section>
     </main>
 
     <footer>
