--- a/index.html
+++ b/index.html
@@ -129,7 +129,22 @@
 
         <!-- FAQ hover -->
         <section class="section1">
-            
+            <div>
+                <h2>Domande frequenti</h2>
+            </div>
+            <hr>
+            <div>
+                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            </div>
+            <hr>
+            <div>
+                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            </div>
+            <hr>
+            <div>
+                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            </div>
+            <hr>
         </section>
     </main>
 
