--- a/index.html
+++ b/index.html
@@ -150,7 +150,51 @@
 
     <footer>
         <!-- footer info links -->
-        <section></section>
+        <section class="footer-box">
+            <div class="section1 footer-flex">
+                <div class="col">
+                    <h4>Prodotto</h4>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                </div>
+                <div class="col">
+                    <h4>Prodotto</h4>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                </div>
+                <div class="col">
+                    <h4>Prodotto</h4>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                </div>
+                <div class="col">
+                    <h4>Prodotto</h4>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                </div>
+                <div class="col">
+                    <h4>Prodotto</h4>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                    <a href="">Dropbox</a>
+                </div>
+            </div>
+
+        </section>
     </footer>
 </body>
 </html>
