added hover on navbar

--- a/index.html
+++ b/index.html
@@ -133,16 +133,19 @@
                 <h2>Domande frequenti</h2>
             </div>
             <hr>
-            <div>
+            <div class="question-flex">
                 <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-chevron-down"></i>
             </div>
             <hr>
-            <div>
+            <div class="question-flex">
                 <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-chevron-down"></i>
             </div>
             <hr>
-            <div>
+            <div class="question-flex">
                 <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-chevron-down"></i>
             </div>
             <hr>
         </section>
@@ -159,6 +162,7 @@
                     <a href="">Dropbox</a>
                     <a href="">Dropbox</a>
                     <a href="">Dropbox</a>
+                    <hr>
                 </div>
                 <div class="col">
                     <h4>Prodotto</h4>
