--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- fixed nav -->
         <nav>
             <div class="nav-left">
-                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="./img/logo-small.png" alt=""></a>
                 <a href="">Perché Dropbox</a>
                 <a href="">Funzioni</a>
                 <a href="">Piani e Prezzi</a>
@@ -37,7 +37,7 @@
                         <a href=""><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <div class="jumbo-right">
-                        <img src="https://picsum.photos/800/400" alt="">
+                        <img src="./img/jumbo.png" alt="">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
         <section class="section1">
             <div class="partner-box">
                 <div class="partner-left">
-                    <img src="https://picsum.photos/800/400" alt="">
+                    <img src="./img/partner.png" alt="">
                 </div>
                 <div class="partner-right">
                     <h3>Entra in contatto con un partner Dropbox</h3>
@@ -147,12 +147,36 @@
         <section class="section1">
             <h2>Esegui più operazioni con Dropbox Business</h2>
             <div class="function-box">
-                <div class="function-element"></div>
-                <div class="function-element"></div>
-                <div class="function-element"></div>
-                <div class="function-element"></div>
-                <div class="function-element"></div>
-                <div class="function-element"></div>
+                <div class="function-element">
+                    <img src="./img/business-feature-switching-tools.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
+                <div class="function-element">
+                    <img src="./img/business-feature-send-files-it.png" alt="">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
+                <div class="function-element">
+                    <img src="./img/business-feature-coordinate-it.png" alt="">
+                                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
+                <div class="function-element">
+                    <img src="./img/business-feature-integrations-it.png" alt="">
+                                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
+                <div class="function-element">
+                    <img src="./img/business-feature-multi-device.png" alt="">
+                                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
+                <div class="function-element">
+                    <img src="./img/business-feature-security.png" alt="">
+                                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex vero hic, asperiores mollitia tempore dicta sint in accusamus repudiandae amet debitis nulla rerum eum quo? Delectus natus sequi porro quos obcaecati mollitia, eligendi, sapiente vel reiciendis earum laudantium! Quaerat nesciunt debitis nisi, ducimus ipsa consectetur recusandae sint tempora dolor ab ipsam, aliquid minima eius maxime nobis eligendi atque similique quam quidem alias asperiores pariatur ut voluptas perspiciatis. Officia, natus.</p>
+                </div>
             </div>
             <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
             <a href="">Scopri di più sui nostri clienti</a>
@@ -161,10 +185,10 @@
         <!-- user's info -->
         <section class="container">
             <div class="user-box">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square des"><img src="./img/designit.svg" alt=""></div>
+                <div class="square asu"><img src="./img/arizona_state_university.svg" alt=""></div>
+                <div class="square uf"><img src="./img/university_of_florida.svg" alt=""></div>
+                <div class="square tops"><img src="./img/topps.svg" alt=""></div>
             </div>
 
             <div class="user-box">
@@ -172,10 +196,10 @@
             </div>
 
             <div class="user-box">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square wbr"><img src="./img/world_bicycle_relief.svg" alt=""></div>
+                <div class="square hea"><img src="./img/hearst_corp.svg" alt=""></div>
+                <div class="square lon"><img src="./img/lonely_planet.svg" alt=""></div>
+                <div class="square cle"><img src="./img/clear_channel.svg" alt=""></div>
             </div>
         </section>
         <div class="section-w-100">
