--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <label for="choice2">Fatturazione annuale</label>
             </div>
             <div class="content-box">
-                <div>
+                <div class="border">
                     <div class="top-box">
                         <i class="fa-solid fa-user"></i> Singolo
                     </div>
                     <div class="main-box">
                         <h3>Professional</h3>
-                        <p>12.00</p>
-                        <p>/mese</p>
+                        <span class="cost">12.00</span>
+                        <span class="gray">/mese</span>
                         <p><i class="fa-solid fa-user"></i> 1 utente</p>
                         <p><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</p>
                         <p><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
@@ -76,14 +76,14 @@
                     </div>
                 </div>
                     
-                <div>
+                <div class="border">
                     <div class="top-box">
                         <i class="fa-solid fa-users"></i> Team
                     </div>
                     <div class="main-box">
                         <h3>Professional</h3>
-                        <p>12.00</p>
-                        <p>/mese</p>
+                        <span class="cost">12.00</span>
+                        <span class="gray">/mese</span>
                         <p><i class="fa-solid fa-user"></i> 1 utente</p>
                         <p><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</p>
                         <p><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
@@ -93,17 +93,19 @@
                         <p>Punti Salienti del piano</p>
                         <p><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</p>
                         <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
+                        <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
+                        <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
                     </div>
                 </div>
 
-                <div>
+                <div class="border">
                     <div class="top-box">
                         <i class="fa-solid fa-building"></i> Azienda
                     </div>
                     <div class="main-box">
                         <h3>Professional</h3>
-                        <p>12.00</p>
-                        <p>/mese</p>
+                        <span class="cost">12.00</span>
+                        <span class="gray">/mese</span>
                         <p><i class="fa-solid fa-user"></i> 1 utente</p>
                         <p><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</p>
                         <p><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
@@ -123,7 +125,7 @@
                 <div class="main2-box">
                     <h3>Enterprise</h3>
                     <button>Contatta l'ufficio vendite</button>
-                    <p>Contatta l'ufficio vendite per i prezzi</p>
+                    <span>Contatta l'ufficio vendite per i prezzi</span>
                     <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
                 </div>
             </div>
