--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-            <a href="">Scopri di più sui nostri clienti</a>
+            <a class="link2" href="">Scopri di più sui nostri clienti</a>
         </section>
 
         <!-- user's info -->
@@ -204,6 +204,8 @@
                 <div class="square cle"><img src="./img/clear_channel.svg" alt=""></div>
             </div>
         </section>
+
+        <!-- free trial -->
         <div class="section-w-100">
             <div class="section1">
                 <div class="freetrial-box">
@@ -224,18 +226,33 @@
             </div>
             <hr>
             <div class="question-flex">
-                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                <i class="fa-solid fa-chevron-down"></i>
+                <div>
+                    <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                    <p class="answers">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores.</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
             </div>
             <hr>
             <div class="question-flex">
-                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                <i class="fa-solid fa-chevron-down"></i>
+                <div>
+                    <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                    <p class="answers">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores.</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
             </div>
             <hr>
             <div class="question-flex">
-                <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
-                <i class="fa-solid fa-chevron-down"></i>
+                <div>
+                    <span class="questions">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                    <p class="answers">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores.</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
             </div>
             <hr>
         </section>
