added middle box

--- a/index.html
+++ b/index.html
@@ -194,7 +194,16 @@
             </div>
 
             <div class="user-box">
-
+                <div>
+                    <div class="middle-box">
+                        <img src="./img/designit.svg" alt="">
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cupiditate sapiente nemo, voluptates aspernatur laudantium veniam fuga tenetur ratione? Inventore velit praesentium nobis veniam sapiente vitae perspiciatis eligendi placeat cum.</p>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+                
+                
             </div>
 
             <div class="user-box">
