added correct question hover

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="partner-right">
                     <h3>Entra in contatto con un partner Dropbox</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis rerum iure porro doloribus veritatis voluptates libero, est harum alias magnam!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae recusandae est veritatis, asperiores sint dolor. Omnis rerum iure porro doloribus veritatis voluptates libero, est harum alias magnam!</p>
                     <button>Trova un partner</button>
                 </div>
             </div>
